entity building at supply